src/main/java/CodeErzeuger/ClobalParser.java
// Generated from C:/Users/Kemal/IdeaProjects/Projekt/src/main/java/CodeErzeuger\Clobal.g4 by ANTLR 4.9.2
package CodeErzeuger;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ClobalParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, ID = 23, INT = 24, WS = 25;
    public static final int
            RULE_file = 0, RULE_functionDecl = 1, RULE_block = 2, RULE_stat = 3, RULE_assignStat = 4,
            RULE_ifStat = 5, RULE_forStat = 6, RULE_returnStat = 7, RULE_printStat = 8,
            RULE_varDecl = 9, RULE_type = 10, RULE_expr = 11;

    private static String[] makeRuleNames() {
        return new String[]{
                "file", "functionDecl", "block", "stat", "assignStat", "ifStat", "forStat",
                "returnStat", "printStat", "varDecl", "type", "expr"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'('", "')'", "'{'", "'}'", "';'", "'='", "'if'", "'else'", "'for'",
                "'return'", "'printf'", "'int'", "'-'", "'!'", "'*'", "'+'", "'=='",
                "'!='", "'<'", "'>'", "'?'", "':'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, "ID",
                "INT", "WS"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Clobal.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public ClobalParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class FileContext extends ParserRuleContext {
        public List<FunctionDeclContext> functionDecl() {
            return getRuleContexts(FunctionDeclContext.class);
        }

        public FunctionDeclContext functionDecl(int i) {
            return getRuleContext(FunctionDeclContext.class, i);
        }

        public List<VarDeclContext> varDecl() {
            return getRuleContexts(VarDeclContext.class);
        }

        public VarDeclContext varDecl(int i) {
            return getRuleContext(VarDeclContext.class, i);
        }

        public FileContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_file;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterFile(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitFile(this);
        }
    }

    public final FileContext file() throws RecognitionException {
        FileContext _localctx = new FileContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_file);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(26);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        setState(26);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                            case 1: {
                                setState(24);
                                functionDecl();
                            }
                            break;
                            case 2: {
                                setState(25);
                                varDecl();
                            }
                            break;
                        }
                    }
                    setState(28);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == T__11);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunctionDeclContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(ClobalParser.ID, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_functionDecl;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterFunctionDecl(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitFunctionDecl(this);
        }
    }

    public final FunctionDeclContext functionDecl() throws RecognitionException {
        FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_functionDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(30);
                type();
                setState(31);
                match(ID);
                setState(32);
                match(T__0);
                setState(33);
                match(T__1);
                setState(34);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BlockContext extends ParserRuleContext {
        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public BlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_block;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterBlock(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitBlock(this);
        }
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_block);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(36);
                match(T__2);
                setState(40);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__6) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__12) | (1L << T__13) | (1L << ID) | (1L << INT))) != 0)) {
                    {
                        {
                            setState(37);
                            stat();
                        }
                    }
                    setState(42);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(43);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StatContext extends ParserRuleContext {
        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public IfStatContext ifStat() {
            return getRuleContext(IfStatContext.class, 0);
        }

        public ForStatContext forStat() {
            return getRuleContext(ForStatContext.class, 0);
        }

        public ReturnStatContext returnStat() {
            return getRuleContext(ReturnStatContext.class, 0);
        }

        public AssignStatContext assignStat() {
            return getRuleContext(AssignStatContext.class, 0);
        }

        public PrintStatContext printStat() {
            return getRuleContext(PrintStatContext.class, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public StatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stat;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitStat(this);
        }
    }

    public final StatContext stat() throws RecognitionException {
        StatContext _localctx = new StatContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_stat);
        try {
            setState(60);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(45);
                    block();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(46);
                    ifStat();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(47);
                    forStat();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(48);
                    returnStat();
                    setState(49);
                    match(T__4);
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(51);
                    assignStat();
                    setState(52);
                    match(T__4);
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(54);
                    printStat();
                    setState(55);
                    match(T__4);
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(57);
                    expr(0);
                    setState(58);
                    match(T__4);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AssignStatContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(ClobalParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public AssignStatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assignStat;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterAssignStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitAssignStat(this);
        }
    }

    public final AssignStatContext assignStat() throws RecognitionException {
        AssignStatContext _localctx = new AssignStatContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_assignStat);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(62);
                match(ID);
                setState(63);
                match(T__5);
                setState(64);
                expr(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class IfStatContext extends ParserRuleContext {
        public ExprContext a;
        public StatContext b;
        public StatContext elsestat;

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public IfStatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ifStat;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterIfStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitIfStat(this);
        }
    }

    public final IfStatContext ifStat() throws RecognitionException {
        IfStatContext _localctx = new IfStatContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_ifStat);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(66);
                match(T__6);
                setState(67);
                match(T__0);
                setState(68);
                ((IfStatContext) _localctx).a = expr(0);
                setState(69);
                match(T__1);
                setState(70);
                ((IfStatContext) _localctx).b = stat();
                setState(73);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                    case 1: {
                        setState(71);
                        match(T__7);
                        setState(72);
                        ((IfStatContext) _localctx).elsestat = stat();
                    }
                    break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ForStatContext extends ParserRuleContext {
        public List<AssignStatContext> assignStat() {
            return getRuleContexts(AssignStatContext.class);
        }

        public AssignStatContext assignStat(int i) {
            return getRuleContext(AssignStatContext.class, i);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public ForStatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_forStat;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterForStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitForStat(this);
        }
    }

    public final ForStatContext forStat() throws RecognitionException {
        ForStatContext _localctx = new ForStatContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_forStat);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(75);
                match(T__8);
                setState(76);
                match(T__0);
                setState(77);
                assignStat();
                setState(78);
                match(T__4);
                setState(79);
                expr(0);
                setState(80);
                match(T__4);
                setState(81);
                assignStat();
                setState(82);
                match(T__1);
                setState(83);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ReturnStatContext extends ParserRuleContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public ReturnStatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_returnStat;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterReturnStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitReturnStat(this);
        }
    }

    public final ReturnStatContext returnStat() throws RecognitionException {
        ReturnStatContext _localctx = new ReturnStatContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_returnStat);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(85);
                match(T__9);
                setState(86);
                expr(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PrintStatContext extends ParserRuleContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public PrintStatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_printStat;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterPrintStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitPrintStat(this);
        }
    }

    public final PrintStatContext printStat() throws RecognitionException {
        PrintStatContext _localctx = new PrintStatContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_printStat);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                match(T__10);
                setState(89);
                match(T__0);
                setState(90);
                expr(0);
                setState(91);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VarDeclContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(ClobalParser.ID, 0);
        }

        public VarDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_varDecl;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterVarDecl(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitVarDecl(this);
        }
    }

    public final VarDeclContext varDecl() throws RecognitionException {
        VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_varDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(93);
                type();
                setState(94);
                match(ID);
                setState(95);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TypeContext extends ParserRuleContext {
        public TypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitType(this);
        }
    }

    public final TypeContext type() throws RecognitionException {
        TypeContext _localctx = new TypeContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_type);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                match(T__11);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExprContext extends ParserRuleContext {
        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        public ExprContext() {
        }

        public void copyFrom(ExprContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class notContext extends ExprContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public notContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterNOT(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitNOT(this);
        }
    }

    public static class NeqContext extends ExprContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public NeqContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterNot(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitNot(this);
        }
    }

    public static class IdExprContext extends ExprContext {
        public TerminalNode ID() {
            return getToken(ClobalParser.ID, 0);
        }

        public IdExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterIDEXPR(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitIDEXPR(this);
        }
    }

    public static class BracketsContext extends ExprContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public BracketsContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterBRACKS(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitBRACKS(this);
        }
    }

    public static class MultContext extends ExprContext {
        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public MultContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterMUL(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitMUL(this);
        }
    }

    public static class AddSubContext extends ExprContext {
        public Token op;

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public AddSubContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterADDSUB(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitADDSUB(this);
        }
    }

    public static class CondOpContext extends ExprContext {
        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public CondOpContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterCondOp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitCondOp(this);
        }
    }

    public static class IntExprContext extends ExprContext {
        public TerminalNode INT() {
            return getToken(ClobalParser.INT, 0);
        }

        public IntExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterINTEXPR(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitINTEXPR(this);
        }
    }

    public static class IdBrackContext extends ExprContext {
        public TerminalNode ID() {
            return getToken(ClobalParser.ID, 0);
        }

        public IdBrackContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterIDBRACKS(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitIDBRACKS(this);
        }
    }

    public static class CompContext extends ExprContext {
        public Token op;

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public CompContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).enterCOMPARISION(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ClobalListener) ((ClobalListener) listener).exitCOMPARISION(this);
        }
    }

    public final ExprContext expr() throws RecognitionException {
        return expr(0);
    }

    private ExprContext expr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExprContext _localctx = new ExprContext(_ctx, _parentState);
        ExprContext _prevctx = _localctx;
        int _startState = 22;
        enterRecursionRule(_localctx, 22, RULE_expr, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(113);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                    case 1: {
                        _localctx = new notContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
